samples/_failures_safe/1761608504_356f90_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_195613d3.c: In function ‘display_compression_result’:
./samples/SAFE/__tmp_195613d3.c:153:12: error: missing terminating " character
  153 |     printf("Checksum: 0x%02
      |            ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_195613d3.c:153:5: error: expected expression at end of input
  153 |     printf("Checksum: 0x%02
      |     ^~~~~~
./samples/SAFE/__tmp_195613d3.c:153:5: error: expected declaration or statement at end of input
